<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.mousephenotype.cda</groupId>
    <artifactId>phenotypedata</artifactId>
    <version>1.0.0</version>

    <packaging>pom</packaging>
    <name>phenotypedata</name>
    <description>
        mousephenotype.org infrastructure - data generation, service layer and web app source code from the CDA at the
        EBI
    </description>

    <url>http://www.mousephenotype.org</url>

    <modules>
        <module>parent</module>
        <module>dependencies</module>
        <module>web</module>
        <module>data-model</module>
        <module>data-model-db</module>
        <module>data-model-solr</module>
        <module>indexers</module>
        <module>loads</module>
        <module>reports</module>
        <module>register-interest</module>
        <module>tests</module>
        <module>thirdparty_loads</module>
        <module>datatests</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
